syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductIssueRecordInfo {
	//ID 
 	string id=2;
	//物料追溯号 
 	string materialTraceNo=3;
	//发料时间 
 	string createTime=4;
	//发料人员ID 
    string createUserID=5;
	//当前状态 
 	string currentState=6;
	//状态变更时间 
 	string lastUpdateTime=7;
	//绑定产品ID 
    string productInfoID=8;
	//工单物料ID 
    string productOrderBomID=9;
	//发料工序ID 
    string issuanceProcessID=10;
    //产品序列号
    string productSerialNo=11;
    //生产工单号
    string productOrderNo=12;
    //物料号
    string materialNo=13;
    //物料描述
    string materialDescription=14;
    //发料工序
    string productionProcess=15;
}

message QueryProductIssueRecordRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    //产品序列号
    // @inject_tag: uri:"productSerialNo" form:"productSerialNo"
    string productSerialNo=4;
    //生产工单号
    // @inject_tag: uri:"productOrderNo" form:"productOrderNo"
    string productOrderNo=5;
    // @inject_tag: uri:"materialDescription" form:"materialDescription"
    string materialDescription=6;
    // @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=7;
    // @inject_tag: uri:"createTime1" form:"createTime1"
     string createTime1=8;
    // @inject_tag: uri:"productionProcess" form:"productionProcess"
    string productionProcess=9;
}

message QueryProductIssueRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductIssueRecordInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductIssueRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductIssueRecordInfo data=3;
}

message GetProductIssueRecordDetailResponse{
    Code code=1;
    string message=2;
    ProductIssueRecordInfo data=3;
}